--- a/examples/accordion.html
+++ b/examples/accordion.html
@@ -35,19 +35,49 @@
 
 			}
 
-			.accordion__item-content {
-				display: none;
-				padding: 10px;
-				border: 1px solid #ccc;
-				margin-top: 5px;
-				background-color: #f9f9d9;
-			}
+			&:not([data-item-active-class]) {
+				.accordion__item-content {
+					display: none;
+					padding: 10px;
+					border: 1px solid #ccc;
+					margin-top: 5px;
+					background-color: #f9f9d9;
+				}
 
-			.active {
-				background-color: #f0f9f9;
 
-				> .accordion__item-content {
-						display: block;
+				.active {
+					background-color: #f0f9f9;
+
+					> .accordion__item-content {
+							display: block;
+					}
+				}
+      }
+
+			&[data-item-active-class] {
+				.accordion__item-content {
+				 	display: block;
+					height: 0;
+					margin: 0;
+					padding: 0;
+					opacity: 0;
+					transform: translate3d(20px, 0px, 0px);
+
+				}
+
+				.custom-class	{
+					background-color: #CD5C5C;
+
+					> .accordion__item-content {
+						height: fit-content;
+						padding: 10px;
+						border: 1px solid #ccc;
+						margin-top: 5px;
+						background-color: #f9f9d9;
+						opacity: 1;
+						transform: translate3d(0px, 0px, 0px);
+						transition: opacity 1s, transform 0.5s;
+					}
 				}
 			}
 		}
@@ -82,7 +112,7 @@
 	<div>
 		<h2>Example of an accordion with 'multiple' mode</h2>
 
-		<div class="accordion" data-accordion="multiple">
+		<div class="accordion" data-accordion="multiple" data-item-active-class="custom-class">
 			<div class="accordion__item" data-accordion-item>
 				<h3 class="accordion__item-title">Item 1</h3>
 				<div class="accordion__item-content" data-accordion-content>Content of item 1. Here you can place any text or HTML code.
