--- a/examples/cookie.html
+++ b/examples/cookie.html
@@ -5,21 +5,21 @@
 	<title>Cookie Example</title>
 	<style>
 		* {
-				box-sizing: border-box;
+			box-sizing: border-box;
 
 		}
 
 		body {
-				height: 100vh;
-				width: 100vw;
+			height: 100vh;
+			width: 100vw;
 		}
 
 		h1 {
-				text-align: center;
+			text-align: center;
 		}
 
 		h2	{
-				margin: 0;
+			margin: 0;
 		}
 
 		.cookie {
@@ -36,15 +36,22 @@
 				justify-content: space-between;
 				gap: 10px;
 				width: 29%;
+
+				.cookie__container {
+					flex: 1;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+				}
 			}
 
 			.cookie__viewing {
 				height: 100%;
 				width: 70%;
 
-				&	> .cookie__container {
+				 .cookie__container {
 					width: 100%;
-					height: 100%;
+					height: 50%;
 
 					.cookie__list {
 						margin-top: 10px;
@@ -64,14 +71,12 @@
 			}
 
 			.cookie__container {
-				display: flex;
-				flex-direction: column;
 				border: 1px solid #ccc;
 				background-color: #f9f9f9;
 				padding: 10px;
 
 				.cookie__input {
-						margin: 5px 0;
+					margin: 5px 0;
 				}
 			}
 		}
@@ -101,14 +106,18 @@
 			<button id="removeCookie">cookie.remove(name)</button>
 		</div>
 	</div>
+
 	<div class="cookie__viewing">
 		<div class="cookie__container">
 			<h2>Current cookies</h2>
 			<ul id="cookieList" class="cookie__list"></ul>
 		</div>
+		<div class="cookie__container">
+			<h2>Cookie value</h2>
+			<p id="cookieValueText">No cookie selected</p>
+		</div>
 	</div>
 </div>
-</body>
 
 <script type="module">
   import cookie from '/js/cookie.js';
@@ -118,6 +127,7 @@
     const getCookieButton = document.getElementById('getCookie');
     const removeCookieButton = document.getElementById('removeCookie');
     const cookieList = document.getElementById('cookieList');
+    const cookieValueText = document.getElementById('cookieValueText');
 
     const updateCookieList = () => {
       cookieList.innerHTML = '';
@@ -134,20 +144,18 @@
       const value = document.getElementById('cookieValue').value;
       const days = document.getElementById('cookieDays').value;
       cookie.set(name, value, days);
-      alert(`Cookie '${name}' has been set!`);
       updateCookieList();
     });
 
     getCookieButton.addEventListener('click', () => {
       const name = document.getElementById('getCookieByName').value;
       const value = cookie.get(name);
-      alert(value ? `Cookie '${name}': ${value}` : `Cookie '${name}' not found.`);
+      cookieValueText.textContent = value ? `Value: ${value}` : 'Cookie not found';
     });
 
     removeCookieButton.addEventListener('click', () => {
       const name = document.getElementById('removeCookieByName').value;
       cookie.remove(name);
-      alert(`Cookie '${name}' has been removed!`);
       updateCookieList();
     });
 
@@ -155,4 +163,5 @@
   });
 </script>
 
+</body>
 </html>
