--- a/src/examples/tabs.html
+++ b/src/examples/tabs.html
@@ -129,12 +129,6 @@
 </div>
 </body>
 
-<script type="module">
-  import tabs from '/js/tabs.js';
-
-  document.addEventListener('DOMContentLoaded', () => {
-    tabs.run();
-  });
-</script>
+<script type="module" src="../index.js"></script>
 
 </html>
