--- a/src/examples/accordion.html
+++ b/src/examples/accordion.html
@@ -73,7 +73,7 @@
 						padding: 10px;
 						border: 1px solid #ccc;
 						margin-top: 5px;
-						background-color: #f9f9d9;
+						background-color: #ddee;
 						opacity: 1;
 						transform: translate3d(0px, 0px, 0px);
 						transition: opacity 1s, transform 0.5s;
@@ -134,14 +134,6 @@
 	</div>
 </div>
 </body>
-
-<script type="module">
-  import accordion from '/js/accordion.js';
-
-  document.addEventListener('DOMContentLoaded', () => {
-    accordion.run();
-  });
-</script>
-
+<script type="module" src="../index.js"></script>
 </html>
 
