--- a/src/examples/cookie.html
+++ b/src/examples/cookie.html
@@ -49,7 +49,7 @@
 				height: 100%;
 				width: 70%;
 
-				 .cookie__container {
+				.cookie__container {
 					width: 100%;
 					height: 50%;
 
@@ -118,9 +118,9 @@
 		</div>
 	</div>
 </div>
-
+</body>
 <script type="module">
-  import cookie from '/js/cookie.js';
+  import { cookie } from '../js/index.js';
 
   document.addEventListener('DOMContentLoaded', () => {
     const setCookieButton = document.getElementById('setCookie');
@@ -162,6 +162,4 @@
     updateCookieList();
   });
 </script>
-
-</body>
 </html>
