--- a/src/examples/readMore.html
+++ b/src/examples/readMore.html
@@ -109,12 +109,6 @@
 </div>
 </body>
 
-<script type="module">
-  import readMore from '/js/readMore.js';
-
-  document.addEventListener('DOMContentLoaded', () => {
-    readMore.run();
-  });
-</script>
+<script type="module" src="../index.js"></script>
 
 </html>
