--- a/js/examples/devices.html
+++ b/js/examples/devices.html
@@ -49,5 +49,40 @@
 	<div id="result"></div>
 </div>
 </body>
-<script type="module" src="../main.js"></script>
+<script type="module">
+  import { devices } from '../index.js';
+
+  document.addEventListener('DOMContentLoaded', () => getDevice());
+
+  const getDevice = () => {
+    const checkDeviceButtons = document.getElementById('check-device');
+    const resultDiv = document.getElementById('result');
+
+    if (!checkDeviceButtons || !resultDiv) {
+      return;
+    }
+
+    checkDeviceButtons.addEventListener('click', () => {
+      let message = 'You are using: ';
+      if (devices.smallMobileLandscape()) {
+        message += 'a small mobile device in landscape mode.';
+      } else if (devices.smallMobilePortrait()) {
+        message += 'a small mobile device in portrait mode.';
+      } else if (devices.mobileLandscape()) {
+        message += 'a mobile device in landscape mode.';
+      } else if (devices.mobilePortrait()) {
+        message += 'a mobile device in portrait mode.';
+      } else if (devices.tabletLandscape()) {
+        message += 'a tablet in landscape mode.';
+      } else if (devices.tabletPortrait()) {
+        message += 'a tablet in portrait mode.';
+      } else if (devices.desktop()) {
+        message += 'a desktop computer.';
+      } else {
+        message += 'an unknown device.';
+      }
+      resultDiv.textContent = message;
+    })
+  }
+</script>
 </html>
