--- a/js/examples/cookie.html
+++ b/js/examples/cookie.html
@@ -3,84 +3,84 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cookie Example</title>
-	<style>
-		* {
-			box-sizing: border-box;
+		<style>
+			* {
+				box-sizing: border-box;
 
-		}
-
-		body {
-			height: 100vh;
-			width: 100vw;
-		}
-
-		h1 {
-			text-align: center;
-		}
-
-		h2	{
-			margin: 0;
-		}
-
-		.cookie {
-			max-width: 100%;
-			height: 70vh;
-			display: flex;
-			flex-direction: row;
-			gap: 10px;
-			padding: 30px;
-
-			.cookie__managing {
-				display: flex;
-				flex-direction: column;
-				justify-content: space-between;
-				gap: 10px;
-				width: 29%;
-
-				.cookie__container {
-					flex: 1;
-					display: flex;
-					flex-direction: column;
-					justify-content: center;
-				}
 			}
 
-			.cookie__viewing {
-				height: 100%;
-				width: 70%;
+			body {
+				height: 100vh;
+				width: 100vw;
+			}
 
-				.cookie__container {
-					width: 100%;
-					height: 50%;
+			h1 {
+				text-align: center;
+			}
 
-					.cookie__list {
-						margin-top: 10px;
+			h2	{
+				margin: 0;
+			}
+
+			.cookie {
+				max-width: 100%;
+				height: 70vh;
+				display: flex;
+				flex-direction: row;
+				gap: 10px;
+				padding: 30px;
+
+				.cookie__managing {
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+					gap: 10px;
+					width: 29%;
+
+					.cookie__container {
+						flex: 1;
 						display: flex;
 						flex-direction: column;
-						flex-wrap: wrap;
-						padding-left: 10px;
+						justify-content: center;
+					}
+				}
 
-						li {
-							width: 100%;
-							white-space: nowrap;
-							overflow: hidden;
-							text-overflow: ellipsis;
+				.cookie__viewing {
+					height: 100%;
+					width: 70%;
+
+					.cookie__container {
+						width: 100%;
+						height: 50%;
+
+						.cookie__list {
+							margin-top: 10px;
+							display: flex;
+							flex-direction: column;
+							flex-wrap: wrap;
+							padding-left: 10px;
+
+							li {
+								width: 100%;
+								white-space: nowrap;
+								overflow: hidden;
+								text-overflow: ellipsis;
+							}
 						}
 					}
 				}
-			}
 
-			.cookie__container {
-				border: 1px solid #ccc;
-				background-color: #f9f9f9;
-				padding: 10px;
+				.cookie__container {
+					border: 1px solid #ccc;
+					background-color: #f9f9f9;
+					padding: 10px;
 
-				.cookie__input {
-					margin: 5px 0;
+					.cookie__input {
+						margin: 5px 0;
+					}
 				}
 			}
-		}
-	</style>
+		</style>
 </head>
 <body>
 <h1>Example of working with cookies</h1>
@@ -119,5 +119,53 @@
 	</div>
 </div>
 </body>
-<script type="module" src="../main.js"></script>
+<script type="module">
+  import { cookie } from '../index.js';
+
+  document.addEventListener('DOMContentLoaded', () => cookieManager());
+
+  const cookieManager = () => {
+    const setCookieButton = document.getElementById('setCookie');
+    const getCookieButton = document.getElementById('getCookie');
+    const removeCookieButton = document.getElementById('removeCookie');
+    const cookieList = document.getElementById('cookieList');
+    const cookieValueText = document.getElementById('cookieValueText');
+
+    if (!setCookieButton || !getCookieButton || !removeCookieButton || !cookieList || !cookieValueText) {
+      return;
+    }
+
+    const updateCookieList = () => {
+      cookieList.innerHTML = '';
+      const cookies = document.cookie.split('; ');
+      cookies.forEach(cookie => {
+        const li = document.createElement('li');
+        li.textContent = cookie;
+        cookieList.appendChild(li);
+      });
+    };
+
+    setCookieButton.addEventListener('click', () => {
+      const name = document.getElementById('cookieName').value;
+      const value = document.getElementById('cookieValue').value;
+      const days = document.getElementById('cookieDays').value;
+      cookie.set(name, value, days);
+      updateCookieList();
+    });
+
+    getCookieButton.addEventListener('click', () => {
+      const name = document.getElementById('getCookieByName').value;
+      const value = cookie.get(name);
+      cookieValueText.textContent = value ? `Value: ${value}` : 'Cookie not found';
+    });
+
+    removeCookieButton.addEventListener('click', () => {
+      const name = document.getElementById('removeCookieByName').value;
+      cookie.remove(name);
+      updateCookieList();
+    });
+
+    updateCookieList();
+  }
+</script>
 </html>
