--- a/html-examples/accordion.html
+++ b/html-examples/accordion.html
@@ -135,7 +135,7 @@
 </div>
 </body>
 <script type="module">
-import { accordion } from "../index.js";
+import { accordion } from "../dist/js/bundle.js";
 
 window.addEventListener("DOMContentLoaded",() => accordion.run())
 </script>
