--- a/html-examples/cookie.html
+++ b/html-examples/cookie.html
@@ -6,16 +6,11 @@
 		<style>
 			* {
 				box-sizing: border-box;
-
 			}
 
 			body {
 				height: 100vh;
 				width: 100vw;
-			}
-
-			h1 {
-				text-align: center;
 			}
 
 			h2	{
@@ -120,7 +115,7 @@
 </div>
 </body>
 <script type="module">
-  import { cookie } from '../index.js';
+  import { cookie } from '../dist/js/bundle.js';
 
   document.addEventListener('DOMContentLoaded', () => cookieManager());
 
