--- a/html-examples/readMore.html
+++ b/html-examples/readMore.html
@@ -109,7 +109,7 @@
 </body>
 
 <script type="module">
-	import { readMore } from "../index.js";
+	import { readMore } from "../dist/js/bundle.js";
 
 	window.addEventListener("DOMContentLoaded",() => readMore.run())
 </script>
