--- a/html-examples/tabs.html
+++ b/html-examples/tabs.html
@@ -131,7 +131,7 @@
 </body>
 
 <script type="module">
-  import { tabs } from "../index.js";
+  import { tabs } from "../dist/js/bundle.js";
 
   window.addEventListener("DOMContentLoaded",() => tabs.run())
 </script>
