--- a/html-examples/devices.html
+++ b/html-examples/devices.html
@@ -50,7 +50,7 @@
 </div>
 </body>
 <script type="module">
-  import { devices } from '../index.js';
+  import { devices } from '../dist/js/bundle.js';
 
   document.addEventListener('DOMContentLoaded', () => getDevice());
 
