--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="header-container jumbotron">
     <div class="container">
         <h1>
-          JS Utils
+          WSKit
         </h1>
         <p>
           Simple and Modular JavaScript Utilities for Your Projects
@@ -16,16 +16,16 @@ layout: default
 
 <div class="container">
     <div class="row">
-        <div class="col-12">
-            <h2 class="header-light regular-pad">What is JS Utils?</h2>
+        <div class="col-12 col-md-8">
+            <h2 class="header-light regular-pad">What is WSKit?</h2>
               <p class="lead">A modern and lightweight collection of JavaScript utilities designed
                 to simplify common tasks in web development. Easily integrate modules
                 into your projects. Clone this repository and start using these tools
                 to quickly enhance your website's functionality.</p>
         </div>
-        <!--<div class="col-md-6 text-center">
-            <img src="{{ "/assets/img/jekyll-dark.png" | relative_url }}" alt="Jekyll logo" class="img-responsive">
-        </div>-->
+        <div class="col-12 col-md-4 text-center">
+            <img src="{{ "/assets/img/wskit.webp" | relative_url }}" alt="Jekyll logo" class="img-responsive">
+        </div>
     </div>
     <hr>
     <div class="row">
