--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@ layout: default
               <p class="lead">A modern and lightweight collection of JavaScript utilities designed
                 to simplify common tasks in web development. Easily integrate modules
                 into your projects. Clone this repository and start using these tools
-                to quickly enhance your website's functionality.</p>
+                to quickly enhance your website's functionality</p>
         </div>
         <div class="col-12 col-md-4 text-center">
             <img src="{{ "/assets/img/wskit.webp" | relative_url }}" alt="Jekyll logo" class="img-responsive">
