Deleted data attribute in accordion, added 'babel/core' for rollup build

--- a/html-examples/accordion.html
+++ b/html-examples/accordion.html
@@ -44,7 +44,6 @@
           background-color: #f9f9d9;
         }
 
-
         .active {
           background-color: #f0f9f9;
 
@@ -97,13 +96,13 @@
 
 			<div class="accordion__item" data-accordion-item>
 				<h3 class="accordion__item-title">Item 2</h3>
-				<div class="accordion__item-content" data-accordion-content>Content of item 2. Any text or HTML code can also be placed here.
+				<div class="accordion__item-content">Content of item 2. Any text or HTML code can also be placed here.
 				</div>
 			</div>
 
 			<div class="accordion__item" data-accordion-item>
 				<h3 class="accordion__item-title">Item 3</h3>
-				<div class="accordion__item-content" data-accordion-content>Content of item 3. You can add anything here, such as images or links.
+				<div class="accordion__item-content">Content of item 3. You can add anything here, such as images or links.
 				</div>
 			</div>
 		</div>
@@ -115,19 +114,19 @@
 		<div class="accordion" data-accordion="multiple" data-item-active-class="custom-class">
 			<div class="accordion__item" data-accordion-item>
 				<h3 class="accordion__item-title">Item 1</h3>
-				<div class="accordion__item-content" data-accordion-content>Content of item 1. Here you can place any text or HTML code.
+				<div class="accordion__item-content">Content of item 1. Here you can place any text or HTML code.
 				</div>
 			</div>
 
 			<div class="accordion__item" data-accordion-item>
 				<h3 class="accordion__item-title">Item 2</h3>
-				<div class="accordion__item-content" data-accordion-content>Content of item 2. Any text or HTML code can also be placed here.
+				<div class="accordion__item-content">Content of item 2. Any text or HTML code can also be placed here.
 				</div>
 			</div>
 
 			<div class="accordion__item" data-accordion-item>
 				<h3 class="accordion__item-title">Item 3</h3>
-				<div class="accordion__item-content" data-accordion-content>Content of item 3. You can add anything here, such as images or links.
+				<div class="accordion__item-content">Content of item 3. You can add anything here, such as images or links.
 				</div>
 			</div>
 		</div>
